--- a/parental-limit.service
+++ b/parental-limit.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=Parental limit service
 
-[Service]
-Type=simple
-ExecStart=
-User=spiderman
-
 [Install]
 WantedBy=multi-user.target
+
+[Service]
+Type=simple
+WorkingDirectory=/usr/local/bin
+ExecStart=/usr/local/bin/play.py /tmp/kid.txt
